Fixed scaling bug on small screens. Content looks bad on small screens though

--- a/styles.css
+++ b/styles.css
@@ -129,9 +129,9 @@ body {
     height: -moz-calc(100% - 100px);
     height: -webkit-calc(100% - 100px);
     height: calc(100% - 100px);
-    width: -moz-calc(100% - 250px - 100px);
-    width: -webkit-calc(100% - 250px - 100px);
-    width: calc(100% - 250px - 100px);
+    width: -moz-calc(100% - 100px);
+    width: -webkit-calc(100% - 100px);
+    width: calc(100% - 100px);
     position: absolute;
     z-index: 1000;
     object-fit: contain;
@@ -180,7 +180,6 @@ body {
     border: none;
     width: 100%;
     height: 100%;
-    min-width: 700px;
 }
 
 /* STYLES FOR NAVIGATION PAGES */
